Paramétrage page nos-projets

--- a/nos-projets.html
+++ b/nos-projets.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/icons/cossetlogo2.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/cossetlogo2.png">
 
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/nos-projets.css">
 
+    <script defer type="module" src="./js/projects-cards.js"></script>
     <script defer src="./js/main.js"></script>
 
-    <title>COSSET Architecture | Architecte situé en Corrèze près de Brive-la-Gaillarde</title>
+    <title>Projets - COSSET Architecture | Architecte situé en Corrèze prêt de Brive-la-Gaillarde</title>
 </head>
 <body>
     <header>
@@ -36,8 +37,6 @@
                 </ul>
             </nav>
         </div>
-
-
 
         <div class="oda">
             <div id="links">
@@ -77,73 +76,24 @@
         </div>
     </header>
 
-    <main>
-        <div class="home" id="accueil">
-            <div class="slider">
-                <div class="slide">
-                    <img src="./assets/images/slider/slide01.jpg" alt="26 logements polygone">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/slider/slide02.jpg" alt="22 logements collectifs à Brive">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/slider/slide03.jpg" alt="bâtiment du groupe scolaire de Ussac">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/slider/slide04.jpg" alt="maison individuelle">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/slider/slide05.jpg" alt="24 logements collectifs polygone">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/slider/slide06.jpg" alt="équipement du lycée Neuvic">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/slider/slide07.jpg" alt="maison individuelle">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/slider/slide08.jpg" alt="maison individuelle">
-                </div>
-                <div class="slide">
-                    <img src="./assets/images/slider/slide01.jpg" alt="26 logements polygone">
-                </div>
-            </div>
+    <section id="projets">
+        <h2>PROJETS</h2>
+
+        <div id="tri">
+            <button>Tous les projets</button>
+            <button>Medico-Social</button>
+            <button>Education</button>
+            <button>Equipements Publics</button>
+            <button>Logements</button>
+            <button>Maisons Individuelles</button>
+            <button>Commerces</button>
+            <button>Industriels</button>
         </div>
 
-        <div class="description">
-            <section>
-                <h1>COSSET Architecte</h1>
-                <div class="trait-noir"></div>
+        <div class="bloc-projet">
 
-                <p>
-                    L'agence d'architecture COSSET/NEYCENSAS fondée en 1986 est implantée 
-                    à Malemort (19) en Corrèze, au cœur du bassin d'agglomération de Brive-la-Gaillarde.
-                </p>
-                <p>
-                    L’agence devient au 1° Janvier 2021 la SARL COSSET ARCHITECTE.
-                </p>
-                <p>
-                    Elle adopte alors un nouveau visuel et change d'identité en devenant la SARL COSSET ARCHITECTE, 
-                    Jean-Paul COSSET en assure la gérance.
-                </p>
-                <p>
-                    Grégory Rebeix rejoint la structure en tant qu’associé au 1° Janvier 2022.
-                </p>
-                <p>
-                    Notre agence est présente sur toute la région Nouvelle-Aquitaine ainsi que 
-                    sur tout le territoire français au regard de son implantation centrale au pied du massif central.
-                </p>
-                <p>
-                    Notre équipe intervient pour tous vos travaux de construction (maisons individuelles, bâtiments collectifs), 
-                    d’extension ou de rénovation, édifices privés (tertiaire, hôtellerie restauration, industriel…) ou bâtiments 
-                    publics (lycées, équipements sociaux et sanitaire)…
-                </p>
-                <p>
-                    Nous vous assistons de la conception de votre projet à la création.
-                </p>
-            </section>
         </div>
-    </main>
+    </section>
 
     <footer>
         <div>Copyright © 2022 - Cosset Architecture</div>
