Ajout page projet

--- a/nos-projets.html
+++ b/nos-projets.html
@@ -79,7 +79,7 @@
     <section id="projets">
         <h2>PROJETS</h2>
 
-        <div id="tri">
+        <div id="tri" style="display: none;">
             <button>Tous les projets</button>
             <button>Medico-Social</button>
             <button>Education</button>
