--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
                             <path d="M20 8l-8 5l-8-5V6l8 5l8-5m0-2H4c-1.11 0-2 .89-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z" 
                             fill="currentColor"></path>
                             </svg>
-                            <p>jp.cosset@wanadoo.fr</p>
+                            <p>contact@atelier-ca.fr</p>
                         </div>
 
                         <div class="bloc-svg">
