--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/cossetlogo2.png">
 
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/contact.css">
 
     <script defer src="./js/main.js"></script>
 
