fonction de tri des projets + rectification textes

--- a/agence.html
+++ b/agence.html
@@ -110,20 +110,52 @@
                 </div>
 
                 <p>
-                    L'agence d'architecture, fondée en 1986 par Jean-Paul COSSET et René-Pierre NEYCENSAS, 
-                    connaît en 2021 des changements majeurs avec le départ à la retraite de René-Pierre 
-                    et l'entrée dans l'agence de Grégory REBEIX en tant qu'associé.
+                    Dirigée par deux associés qui coordonnent une équipe aux talents complémentaires, 
+                    elle donne vie à des propositions architecturales sensibles et justifiées.<br>
+                    C’est au fil du temps, de la richesse des rencontres et des projets que l’agence 
+                    a su développer des compétences précises lui permettant d’acquérir les connaissances 
+                    nécessaires à l’élargissement de son domaine d’intervention. Aujourd’hui, elle intervient 
+                    dans le domaine public et privé, en programme neuf ou en réhabilitation, de la construction 
+                    neuve de maison individuelle jusqu'à la conception architecturale de logements collectifs ou de bâtiments professionnels.<br>
+                    COSSET ARCHITECTE met en place une méthode de projet issu d’un travail collectif et qui vise à 
+                    répondre à deux objectifs majeurs : la satisfaction des maîtres d’ouvrages et des usagers. 
+                    L’agence conçoit avec rigueur et créativité, des projets innovants fondés sur l’écoute des besoins
+                    et des envies de la maîtrise d’ouvrage.
                 </p>
                 <p>
-                    C'est alors que l'agence adopte un nouveau visuel et change d'identité en devenant 
-                    la SARL COSSET ARCHITECTE, Jean-Paul COSSET en assurant la gérance
+                    Depuis sa création, COSSET ARCHITECTE a toujours été animée par l’envie de participer 
+                    activement à l’acte de bâtir, à travers des partenariats avec les donneurs d’ordres dans 
+                    tous les domaines de la construction. Attachée au respect des coûts incontournables, l’agence 
+                    voit comme dénominateur commun à l’ensemble de ses projets, la création d’un partenariat avec les 
+                    maîtres d’ouvrage, mais également avec l’ensemble des partenaires du projet d’architecture. Cette 
+                    collaboration est fondée sur des valeurs humaines autour du respect et de la transparence, gage de 
+                    qualité et de confiance.
                 </p>
                 <p>
-                    Implantée à Malemort (19) en Corrèze, au coeur du bassin d'agglomération de 
-                    Brive-la-Gaillarde, l'agence peut intervenir dans toute la région Nouvelle-Aquitaine 
-                    ainsi que sur tout le territoire français au vu de son implantation centrale 
-                    au pied du massif central.
+                    Titulaire d’un diplôme d’État, l’Architecte recouvre un acte professionnel 
+                    artistique et un acte de maîtrise d’œuvre qui a pour objet la conception et la 
+                    réalisation des espaces dans tous les domaines.
                 </p>
+                <p>
+                    <ul id="unorderListText">
+                        <li>De la conception à l’après-vente, son équipe peut intervenir à tous les stades d’un projet :</li>
+                        <li>●  Choix du terrain</li>
+                        <li>●  Aide à la programmation (définition des besoins)</li>
+                        <li>●  Diagnostic</li>
+                        <li>●  Conception</li>
+                        <li>●  Expertise</li>
+                        <li>●  Evaluation du budget</li>
+                        <li>●  Démarches administratives</li>
+                        <li>●  Appel d’offres</li>
+                        <li>●  Suivi des travaux et gestion financière</li>
+                        <li>●  Réception des travaux</li>
+                    </ul>
+                </p>
+                <p>
+                    « Un projet d’architecture ? Contactez dès maintenant l’agence COSSET 
+                    ARCHITECTE et donnez vie à vos envies lors d’un premier rendez-vous ! »
+                </p>
+
             </section>
 
 
@@ -132,9 +164,39 @@
 
     <footer>
         <div>Copyright © 2022 - Cosset Architecture</div>
+        <div class="footerLinks">
+            <a href="https://fr-fr.facebook.com/CossetNeycensas/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" 
+                xmlns:xlink="http://www.w3.org/1999/xlink" 
+                aria-hidden="true" role="img" 
+                class="iconify iconify--bx" 
+                width="35" height="35" 
+                preserveAspectRatio="xMidYMid meet"
+                 viewBox="0 0 24 24"><path d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h8.615v-6.96h-2.338v-2.725h2.338v-2c0-2.325 1.42-3.592 3.5-3.592c.699-.002 1.399.034 2.095.107v2.42h-1.435c-1.128 0-1.348.538-1.348 1.325v1.735h2.697l-.35 2.725h-2.348V21H20a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1z" fill="currentColor"></path></svg>
+            </a>
+            <a href="https://instagram.com/cossetarchitecte/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" 
+                xmlns:xlink="http://www.w3.org/1999/xlink" 
+                aria-hidden="true" role="img" 
+                class="iconify iconify--mdi"
+                width="35" height="35" 
+                preserveAspectRatio="xMidYMid meet" 
+                viewBox="0 0 24 24"><path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3z" fill="currentColor"></path></svg>
+            </a>
+            <a href="https://www.linkedin.com/company/cosset-architecte/" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" 
+                xmlns:xlink="http://www.w3.org/1999/xlink" 
+                aria-hidden="true" role="img" 
+                class="iconify iconify--mdi" 
+                width="35" height="35" 
+                preserveAspectRatio="xMidYMid meet" 
+                viewBox="0 0 24 24"><path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z" fill="currentColor"></path></svg>
+            </a>
+        </div>
 
+        </div>
         <div class="mentions">
-            <a href="../pages/mentions.html">Mentions Légales & CGU</a>
+            <a href="mentions.html">Mentions Légales & CGU</a>
         </div>
     </footer>
 </body>
