rectification footer et menu nav

--- a/projet.html
+++ b/projet.html
@@ -32,7 +32,17 @@
                 <ul class="menu">
                     <li><a href="./index.html">Accueil</a></li>
                     <li><a href="./agence.html">Agence</a></li>
-                    <li><a href="./nos-projets.html">Projets</a></li>
+                    <li id="projects">
+                        <a href="./nos-projets.html">Projets</a>
+                        <button class="sourt_out so1 active">Tous les projets</button>
+                        <button class="sourt_out so2">Medico-Social</button>
+                        <button class="sourt_out so3">Education</button>
+                        <button class="sourt_out so4">Equipements Publics</button>
+                        <button class="sourt_out so5">Logements</button>
+                        <button class="sourt_out so6">Maisons Individuelles</button>
+                        <!-- <button class="sourt_out so7">Commerces</button> -->
+                        <button class="sourt_out so8">Industriels</button>
+                    </li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -90,7 +100,7 @@
                 xmlns:xlink="http://www.w3.org/1999/xlink" 
                 aria-hidden="true" role="img" 
                 class="iconify iconify--bx" 
-                width="35" height="35" 
+                width="30" height="30" 
                 preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 24 24"><path d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h8.615v-6.96h-2.338v-2.725h2.338v-2c0-2.325 1.42-3.592 3.5-3.592c.699-.002 1.399.034 2.095.107v2.42h-1.435c-1.128 0-1.348.538-1.348 1.325v1.735h2.697l-.35 2.725h-2.348V21H20a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1z" fill="currentColor"></path></svg>
             </a>
@@ -99,7 +109,7 @@
                 xmlns:xlink="http://www.w3.org/1999/xlink" 
                 aria-hidden="true" role="img" 
                 class="iconify iconify--mdi"
-                width="35" height="35" 
+                width="30" height="30" 
                 preserveAspectRatio="xMidYMid meet" 
                 viewBox="0 0 24 24"><path d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8A1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5a5 5 0 0 1-5 5a5 5 0 0 1-5-5a5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3a3 3 0 0 0 3 3a3 3 0 0 0 3-3a3 3 0 0 0-3-3z" fill="currentColor"></path></svg>
             </a>
@@ -108,7 +118,7 @@
                 xmlns:xlink="http://www.w3.org/1999/xlink" 
                 aria-hidden="true" role="img" 
                 class="iconify iconify--mdi" 
-                width="35" height="35" 
+                width="30" height="30" 
                 preserveAspectRatio="xMidYMid meet" 
                 viewBox="0 0 24 24"><path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z" fill="currentColor"></path></svg>
             </a>
