Mise à zéro du tri page accueil

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <script defer src="./js/main.js"></script>
+    <script defer src="./js/index.js"></script>
 
     <title>COSSET Architecture | Architecte situé en Corrèze près de Brive-la-Gaillarde</title>
 </head>
