Flex + page mentions légales et CGU

--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
             </a>
         </div>
         <div class="mentions">
-            <a href="../pages/mentions.html">Mentions Légales & CGU</a>
+            <a href="./mentions.html">Mentions Légales & CGU</a>
         </div>
     </footer>
 </body>
