--- a/nos-projets.html
+++ b/nos-projets.html
@@ -86,24 +86,28 @@
         </div>
     </header>
 
-    <section id="projets">
-        <h2>PROJETS</h2>
+    <main>
+        <section id="projets">
+            <h2>PROJETS</h2>
 
-        <div id="tri" style="display: none;">
-            <button>Tous les projets</button>
-            <button>Medico-Social</button>
-            <button>Education</button>
-            <button>Equipements Publics</button>
-            <button>Logements</button>
-            <button>Maisons Individuelles</button>
-            <button>Commerces</button>
-            <button>Industriels</button>
-        </div>
+            <div id="tri" style="display: none;">
+                <button>Tous les projets</button>
+                <button>Medico-Social</button>
+                <button>Education</button>
+                <button>Equipements Publics</button>
+                <button>Logements</button>
+                <button>Maisons Individuelles</button>
+                <button>Commerces</button>
+                <button>Industriels</button>
+            </div>
 
-        <div class="bloc-projet">
+            <div class="bloc-projet">
 
-        </div>
-    </section>
+            </div>
+        </section>
+    </main>
+
+
 
     <footer>
         <div>Copyright © 2022 - Cosset Architecture</div>
@@ -137,7 +141,7 @@
             </a>
         </div>
         <div class="mentions">
-            <a href="../pages/mentions.html">Mentions Légales & CGU</a>
+            <a href="./mentions.html">Mentions Légales & CGU</a>
         </div>
     </footer>
 </body>
