--- a/agence.html
+++ b/agence.html
@@ -194,7 +194,7 @@
             </a>
         </div>
         <div class="mentions">
-            <a href="../pages/mentions.html">Mentions Légales & CGU</a>
+            <a href="./mentions.html">Mentions Légales & CGU</a>
         </div>
     </footer>
 </body>
