--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </a>
         </div>
         <div class="mentions">
-            <a href="../pages/mentions.html">Mentions Légales & CGU</a>
+            <a href="./mentions.html">Mentions Légales & CGU</a>
         </div>
     </footer>
 </body>
