--- a/mentions.html
+++ b/mentions.html
@@ -75,10 +75,105 @@
         </div>
     </header>
 
-    <main id="mentions">
-
-
-
+    <main>
+        <section id="mentions">
+            <h1>Mentions légales & Conditions Générales d'Utilisation</h1>
+            <section class="articles">
+                <h2>ARTICLE N°1 - EDITEUR DU SITE</h2>
+                <p>
+                    SARL COSSET ARCHITECTE au capital de 90 000 €<br>
+                    Immatriculation : 881053409 00010 - NAF (APE) : 7111Z<br>
+                    Adresse : 14, Avenue Marie et Pierre Curie - 19360 MALEMORT SUR CORRÈZE<br>
+                    Téléphone : 0983551105<br>
+                    Email : contact@atelier-ca.fr<br>
+                    Site Web : NEWMIPS - https://www.atelier-ca.fr<br>
+                    Responsable éditorial : Sergio RAMOS LOPES<br>
+                </p>
+            </section>
+            <section class="articles">
+                <h2>ARTICLE N°2 - HEBERGEMENT</h2>
+                <p>
+                    SAS OVH au capital de 10 069 020 €<br>
+                    Immatriculation : 424 761 419 00045 - RCS Lille Métropole<br>
+                    Site Web : www.ovh.fr<br>
+                </p>
+            </section>
+            <section class="articles">
+                <h2>ARTICLE N°3 - DEVELOPPPEMENT</h2>
+                <p>
+                    Développeur : Fabio RAMOS LOPES<br>
+                    Localisation : Bordeaux (33)<br>
+                    Profil : https://www.linkedin.com/in/fabio-ramoslopes/<br>
+                </p>
+            </section>
+            <section class="articles">
+                <h2>ARTICLE N°4 - CONDITIONS D'UTILISATION</h2>
+                <p>
+                    Le site Atelier-CA - https://www.atelier-ca.fr - est proposé en différents langages web (HTML, Javascript, CSS, etc…).<br>
+                    Il est accessible via un navigateur compatible de type Firefox, Google Chrome, Opéra, etc…<br>
+                    Nos équipes mettent tout en œuvre pour assurer une information fiable et une mise à jour fiable de ses sites internet.<br>
+                    Toutefois, des erreurs ou omissions peuvent survenir.<br>
+                    L’internaute devra donc s’assurer de l’exactitude des informations auprès de COSSET ARCHITECTE, et signaler toutes modifications du site qu’il jugerait utile.<br>
+                    COSSET ARCHITECTE n’est en aucun cas responsable de l’utilisation faite de ces informations, et de tout préjudice direct ou indirect pouvant en découler.<br>
+                </p>
+            </section>
+            <section class="articles">
+                <h2>ARTICLE N°5 - DONNEES PERSONNELLES & COOKIES</h2>
+                <p>
+                    Aucune de vos données personnelles n'est nécessaire lorsque vous visitez le site Atelier-CA - https://www.atelier-ca.fr<br>
+                    Aucun cookies n'est demandés par le site Atelier-CA - https://www.atelier-ca.fr<br>
+                </p>
+            </section>
+            <section class="articles">
+                <h2>ARTICLE N°6 - LIEN HYOERTEXTES</h2>
+                <p>
+                    Le site Atelier-CA - https://www.atelier-ca.fr intègre des liens vers d'autres sites internet<br>
+                    La SARL COSSET ARCHITECTE ne dispose d'aucun moyen pour contrôler les sites en connexion avec ce dernier.<br>
+                    COSSET ARCHITECTE ne répond pas de la disponibilité de tels sites et sources externes, ni ne la garantit.<br>
+                    Elle ne peut être tenue pour responsable de tout dommage, de quelque nature que ce soit, résultant du contenu de ces sites ou sources externes, et notamment des informations, produits ou services qu’ils proposent, ou de tout usage qui peut être fait de ces éléments.<br>
+                    Les risques liés à cette utilisation incombent pleinement à l’internaute, qui doit se conformer à leurs conditions d’utilisation.<br>
+                    Les utilisateurs, les abonnés et les visiteurs des sites internet ne peuvent pas mettre en place un hyperlien en direction de ce site sans l’autorisation expresse et préalable de la SARL COSSET ARCHITECTE.<br>
+                    Dans l’hypothèse où un utilisateur ou visiteur souhaiterait mettre en place un hyperlien en direction du site Atelier-CA - https://www.atelier-ca.fr, il lui appartiendra d’adresser un email accessible sur le site afin de formuler sa demande de mise en place d’un hyperlien.<br>
+                    La SARL COSSET ARCHITECTE se réserve le droit d’accepter ou de refuser un hyperlien sans avoir à en justifier sa décision.<br>
+                </p>
+            </section>
+            <section class="articles">
+                <h2>ARTICLE N°7 - SERVICES FOURNIS</h2>
+                <p>
+                    L’ensemble des activités de la société ainsi que ses informations sont présentés sur le site NEWMIPS - https://www.atelier-ca.fr.<br>
+                    La SARL COSSET ARCHITECTE s’efforce de fournir sur le site Atelier-CA - https://www.atelier-ca.fr - des informations aussi précises que possible.<br>
+                    Par ailleurs, tous les informations indiquées sur le site Atelier-CA - https://www.atelier-ca.fr - sont données à titre indicatif, et sont susceptibles de changer ou d’évoluer sans préavis.<br>
+                </p>
+            </section>
+            <section class="articles">
+                <h2>ARTICLE N°8 - LIMITES</h2>
+                <p>
+                    Les informations contenues sur le site Atelier-CA - https://www.atelier-ca.fr - sont aussi précises que possible et le site remis à jour à différentes périodes de l’année.<br>
+                    Il peut toutefois contenir des inexactitudes ou des omissions.<br>
+                    Si vous constatez une lacune, erreur ou ce qui parait être un dysfonctionnement, merci de bien vouloir le signaler par email, à l’adresse contact@atelier-ca.fr, en décrivant le problème de la manière la plus précise possible (page posant problème, type d’ordinateur et de navigateur utilisé, …).<br>
+                    Tout contenu téléchargé se fait aux risques et périls de l’utilisateur et sous sa seule responsabilité. En conséquence, ne saurait être tenu responsable d’un quelconque dommage subi par l’ordinateur de l’utilisateur ou d’une quelconque perte de données consécutives au téléchargement.<br>
+                    De plus, l’utilisateur du site s’engage à accéder au site en utilisant un matériel récent, ne contenant pas de virus et avec un navigateur de dernière génération mis-à-jour.<br>
+                    Les liens hypertextes mis en place dans le cadre du présent site internet en direction d’autres ressources présentes sur le réseau Internet ne sauraient engager la responsabilité de la SARL COSSET ARCHITECTE.<br>
+                </p>
+            </section>
+            <section class="articles">
+                <h2>ARTICLE N°9 - PROPRIETE INTELLECTUELLE</h2>
+                <p>
+                    Tout le contenu du site Atelier-CA - https://www.atelier-ca.fr, incluant, de façon non limitative, les graphismes, images, textes, vidéos, animations, sons, logos, gifs et icônes ainsi que leur mise en forme sont la propriété exclusive de la société à l’exception des marques, logos ou contenus appartenant à d’autres sociétés partenaires, auteurs ou sous licences libres.<br>
+                    Toute reproduction, distribution, modification, adaptation, retransmission ou publication, même partielle, de ces différents éléments est strictement interdite sans l’accord exprès par écrit de la SARL COSSET ARCHITECTE.<br>
+                    Cette représentation ou reproduction, par quelque procédé que ce soit, constitue une contrefaçon sanctionnée par les articles L.335-2 et suivants du Code de la propriété intellectuelle.<br>
+                    Le non-respect de cette interdiction constitue une contrefaçon pouvant engager la responsabilité civile et pénale du contrefacteur.<br>
+                    En outre, les propriétaires des Contenus copiés pourraient intenter une action en justice à votre encontre.<br>
+                </p>
+            </section>
+            <section class="articles">
+                <h2>ARTICLE N°10 - LITIGES</h2>
+                <p>
+                    Les présentes conditions du site Atelier-CA - https://www.atelier-ca.fr sont régies par les lois françaises et toute contestation ou litiges qui pourraient naître de l’interprétation ou de l’exécution de celles-ci seront de la compétence exclusive des tribunaux dont dépend le siège social de la société.<br>
+                    La langue de référence, pour le règlement de contentieux éventuels, est le français.<br>
+                </p>
+            </section>
+        </section>
     </main>
 
     <footer>
@@ -113,7 +208,7 @@
             </a>
         </div>
         <div class="mentions">
-            <a href="../pages/mentions.html">Mentions Légales & CGU</a>
+            <a href="./mentions.html">Mentions Légales & CGU</a>
         </div>
     </footer>
 </body>
