Fix Flex page projet

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
                         <h3>ADRESSE</h3>
 
                         <p>14, av. Marie et Pierre Curie</p>
-                        <p>19360 MALEMORT SUR CORRÈZE</p>
+                        <p>19360 MALEMORT</p>
 
                         <div class="bloc-svg">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" 
