--- a/mentions.html
+++ b/mentions.html
@@ -81,12 +81,12 @@
             <section class="articles">
                 <h2>ARTICLE N°1 - EDITEUR DU SITE</h2>
                 <p>
-                    SARL COSSET ARCHITECTE au capital de 90 000 €<br>
+                    SARL COSSET ARCHITECTE au capital de 20 000 €<br>
                     Immatriculation : 881053409 00010 - NAF (APE) : 7111Z<br>
-                    Adresse : 14, Avenue Marie et Pierre Curie - 19360 MALEMORT SUR CORRÈZE<br>
-                    Téléphone : 0983551105<br>
+                    Adresse : 14, Avenue Marie et Pierre Curie - 19360 MALEMORT<br>
+                    Téléphone : 0555928050<br>
                     Email : contact@atelier-ca.fr<br>
-                    Site Web : NEWMIPS - https://www.atelier-ca.fr<br>
+                    Site Web : Atelier-CA - https://www.atelier-ca.fr<br>
                     Responsable éditorial : Sergio RAMOS LOPES<br>
                 </p>
             </section>
