--- a/projet.html
+++ b/projet.html
@@ -86,10 +86,11 @@
         </div>
     </header>
 
-    <main id="main-projet">
+    <main>
+        <div id="main-projet">
 
 
-
+        </div>
     </main>
 
     <footer>
