--- a/projet.html
+++ b/projet.html
@@ -34,7 +34,7 @@
                     <li><a href="./agence.html">Agence</a></li>
                     <li id="projects">
                         <a href="./nos-projets.html">Projets</a>
-                        <button class="sourt_out so1 active">Tous les projets</button>
+                        <button class="sourt_out so1">Tous les projets</button>
                         <button class="sourt_out so2">Medico-Social</button>
                         <button class="sourt_out so3">Education</button>
                         <button class="sourt_out so4">Equipements Publics</button>
