--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/cossetlogo2.png">
 
+    <meta name="title" content="COSSET ARCHITECTURE">
+    <meta name="description" content="Notre équipe intervient pour tous vos travaux de construction (maisons individuelles, bâtiments collectifs), d’extension ou de rénovation, édifices privés (tertiaire, hôtellerie restauration, industriel…) ou bâtiments publics (lycées, équipements sociaux et sanitaire).">
+
+    <meta name="author" content="COSSET ARCHITECTURE">
+    <meta name="keywords" content="atelier, architecte, architecture, maison, bâtiment, bureaux, étude, expertise, normes, ouvrage, extension, surélévation, commerces, public, erp, faisabilité, brive, malemort, agence, construction, renovation">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://atelier-ca.fr/">
+    <meta property="og:title" content="COSSET ARCHITECTURE">
+    <meta property="og:description" content="Notre équipe intervient pour tous vos travaux de construction (maisons individuelles, bâtiments collectifs), d’extension ou de rénovation, édifices privés (tertiaire, hôtellerie restauration, industriel…) ou bâtiments publics (lycées, équipements sociaux et sanitaire).">
+    <meta property="og:image" content="./assets/images/atelier-ca.jpg/">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://atelier-ca.fr/">
+    <meta property="twitter:title" content="COSSET ARCHITECTURE">
+    <meta property="twitter:description" content="Notre équipe intervient pour tous vos travaux de construction (maisons individuelles, bâtiments collectifs), d’extension ou de rénovation, édifices privés (tertiaire, hôtellerie restauration, industriel…) ou bâtiments publics (lycées, équipements sociaux et sanitaire).">
+    <meta property="twitter:image" content="./assets/images/atelier-ca.jpg/">
+
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 
