--- a/mentions.html
+++ b/mentions.html
@@ -77,21 +77,21 @@
 
     <main>
         <section id="mentions">
-            <h1>Mentions légales & Conditions Générales d'Utilisation</h1>
+            <h1>MENTIONS LEGALES & CONDITIONS GENERALES D'UTILISATION</h1>
             <section class="articles">
-                <h2>ARTICLE N°1 - EDITEUR DU SITE</h2>
+                <h2>Article n°1 - Editeur du site</h2>
                 <p>
                     SARL COSSET ARCHITECTE au capital de 20 000 €<br>
                     Immatriculation : 881053409 00010 - NAF (APE) : 7111Z<br>
                     Adresse : 14, Avenue Marie et Pierre Curie - 19360 MALEMORT<br>
-                    Téléphone : 0555928050<br>
+                    Téléphone : 05 55 92 80 50<br>
                     Email : contact@atelier-ca.fr<br>
                     Site Web : Atelier-CA - https://www.atelier-ca.fr<br>
                     Responsable éditorial : Sergio RAMOS LOPES<br>
                 </p>
             </section>
             <section class="articles">
-                <h2>ARTICLE N°2 - HEBERGEMENT</h2>
+                <h2>Article n°2 - Hébergement</h2>
                 <p>
                     SAS OVH au capital de 10 069 020 €<br>
                     Immatriculation : 424 761 419 00045 - RCS Lille Métropole<br>
@@ -99,7 +99,7 @@
                 </p>
             </section>
             <section class="articles">
-                <h2>ARTICLE N°3 - DEVELOPPPEMENT</h2>
+                <h2>Article n°3 - Développement</h2>
                 <p>
                     Développeur : Fabio RAMOS LOPES<br>
                     Localisation : Bordeaux (33)<br>
@@ -107,7 +107,7 @@
                 </p>
             </section>
             <section class="articles">
-                <h2>ARTICLE N°4 - CONDITIONS D'UTILISATION</h2>
+                <h2>Article n°4 - Conditions d'utilisation</h2>
                 <p>
                     Le site Atelier-CA - https://www.atelier-ca.fr - est proposé en différents langages web (HTML, Javascript, CSS, etc…).<br>
                     Il est accessible via un navigateur compatible de type Firefox, Google Chrome, Opéra, etc…<br>
@@ -118,14 +118,14 @@
                 </p>
             </section>
             <section class="articles">
-                <h2>ARTICLE N°5 - DONNEES PERSONNELLES & COOKIES</h2>
+                <h2>Article n°5 - Données Personnelles & Cookies</h2>
                 <p>
                     Aucune de vos données personnelles n'est nécessaire lorsque vous visitez le site Atelier-CA - https://www.atelier-ca.fr<br>
-                    Aucun cookies n'est demandés par le site Atelier-CA - https://www.atelier-ca.fr<br>
+                    Aucun cookies n'est demandé par le site Atelier-CA - https://www.atelier-ca.fr<br>
                 </p>
             </section>
             <section class="articles">
-                <h2>ARTICLE N°6 - LIEN HYOERTEXTES</h2>
+                <h2>Article n°6 - Liens Hypertextes</h2>
                 <p>
                     Le site Atelier-CA - https://www.atelier-ca.fr intègre des liens vers d'autres sites internet<br>
                     La SARL COSSET ARCHITECTE ne dispose d'aucun moyen pour contrôler les sites en connexion avec ce dernier.<br>
@@ -138,15 +138,15 @@
                 </p>
             </section>
             <section class="articles">
-                <h2>ARTICLE N°7 - SERVICES FOURNIS</h2>
+                <h2>Article n°7 - Services Fournis</h2>
                 <p>
-                    L’ensemble des activités de la société ainsi que ses informations sont présentés sur le site NEWMIPS - https://www.atelier-ca.fr.<br>
+                    L’ensemble des activités de la société ainsi que ses informations sont présentés sur le site Atelier-CA - https://www.atelier-ca.fr.<br>
                     La SARL COSSET ARCHITECTE s’efforce de fournir sur le site Atelier-CA - https://www.atelier-ca.fr - des informations aussi précises que possible.<br>
                     Par ailleurs, tous les informations indiquées sur le site Atelier-CA - https://www.atelier-ca.fr - sont données à titre indicatif, et sont susceptibles de changer ou d’évoluer sans préavis.<br>
                 </p>
             </section>
             <section class="articles">
-                <h2>ARTICLE N°8 - LIMITES</h2>
+                <h2>Article n°8 - Limites</h2>
                 <p>
                     Les informations contenues sur le site Atelier-CA - https://www.atelier-ca.fr - sont aussi précises que possible et le site remis à jour à différentes périodes de l’année.<br>
                     Il peut toutefois contenir des inexactitudes ou des omissions.<br>
@@ -157,17 +157,17 @@
                 </p>
             </section>
             <section class="articles">
-                <h2>ARTICLE N°9 - PROPRIETE INTELLECTUELLE</h2>
+                <h2>Article n°9 - Propriété intellectuelle</h2>
                 <p>
                     Tout le contenu du site Atelier-CA - https://www.atelier-ca.fr, incluant, de façon non limitative, les graphismes, images, textes, vidéos, animations, sons, logos, gifs et icônes ainsi que leur mise en forme sont la propriété exclusive de la société à l’exception des marques, logos ou contenus appartenant à d’autres sociétés partenaires, auteurs ou sous licences libres.<br>
-                    Toute reproduction, distribution, modification, adaptation, retransmission ou publication, même partielle, de ces différents éléments est strictement interdite sans l’accord exprès par écrit de la SARL COSSET ARCHITECTE.<br>
-                    Cette représentation ou reproduction, par quelque procédé que ce soit, constitue une contrefaçon sanctionnée par les articles L.335-2 et suivants du Code de la propriété intellectuelle.<br>
+                    Toute reproduction, distribution, modification, adaptation, retransmission ou publication, même partielle, de ces différents éléments est strictement interdite sans l’accord express par écrit de la SARL COSSET ARCHITECTE.<br>
+                    Cette représentation ou reproduction, par quelque procédé que ce soit, constitue une contrefaçon sanctionnée par les Articles L.335-2 et suivants du Code de la propriété intellectuelle.<br>
                     Le non-respect de cette interdiction constitue une contrefaçon pouvant engager la responsabilité civile et pénale du contrefacteur.<br>
                     En outre, les propriétaires des Contenus copiés pourraient intenter une action en justice à votre encontre.<br>
                 </p>
             </section>
             <section class="articles">
-                <h2>ARTICLE N°10 - LITIGES</h2>
+                <h2>Article n°10 - Litiges</h2>
                 <p>
                     Les présentes conditions du site Atelier-CA - https://www.atelier-ca.fr sont régies par les lois françaises et toute contestation ou litiges qui pourraient naître de l’interprétation ou de l’exécution de celles-ci seront de la compétence exclusive des tribunaux dont dépend le siège social de la société.<br>
                     La langue de référence, pour le règlement de contentieux éventuels, est le français.<br>
