Fix text content

--- a/mentions.html
+++ b/mentions.html
@@ -127,7 +127,7 @@
             <section class="articles">
                 <h2>Article n°6 - Liens Hypertextes</h2>
                 <p>
-                    Le site Atelier-CA - https://www.atelier-ca.fr intègre des liens vers d'autres sites internet<br>
+                    Le site Atelier-CA - https://www.atelier-ca.fr intègre des liens vers d'autres sites internet.<br>
                     La SARL COSSET ARCHITECTE ne dispose d'aucun moyen pour contrôler les sites en connexion avec ce dernier.<br>
                     COSSET ARCHITECTE ne répond pas de la disponibilité de tels sites et sources externes, ni ne la garantit.<br>
                     Elle ne peut être tenue pour responsable de tout dommage, de quelque nature que ce soit, résultant du contenu de ces sites ou sources externes, et notamment des informations, produits ou services qu’ils proposent, ou de tout usage qui peut être fait de ces éléments.<br>
