--- a/mentions.html
+++ b/mentions.html
@@ -157,7 +157,7 @@
                 </p>
             </section>
             <section class="articles">
-                <h2>Article n°9 - Propriété intellectuelle</h2>
+                <h2>Article n°9 - Propriété Intellectuelle</h2>
                 <p>
                     Tout le contenu du site Atelier-CA - https://www.atelier-ca.fr, incluant, de façon non limitative, les graphismes, images, textes, vidéos, animations, sons, logos, gifs et icônes ainsi que leur mise en forme sont la propriété exclusive de la société à l’exception des marques, logos ou contenus appartenant à d’autres sociétés partenaires, auteurs ou sous licences libres.<br>
                     Toute reproduction, distribution, modification, adaptation, retransmission ou publication, même partielle, de ces différents éléments est strictement interdite sans l’accord express par écrit de la SARL COSSET ARCHITECTE.<br>
