hot fix meta data

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <meta property="og:url" content="https://atelier-ca.fr/">
     <meta property="og:title" content="COSSET ARCHITECTURE">
     <meta property="og:description" content="Notre équipe intervient pour tous vos travaux de construction (maisons individuelles, bâtiments collectifs), d’extension ou de rénovation, édifices privés (tertiaire, hôtellerie restauration, industriel…) ou bâtiments publics (lycées, équipements sociaux et sanitaire).">
-    <meta property="og:image" content="./assets/images/atelier-ca.jpg/">
+    <meta property="og:image" content="https://atelier-ca.fr/assets/images/atelier-ca.jpg/">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://atelier-ca.fr/">
     <meta property="twitter:title" content="COSSET ARCHITECTURE">
     <meta property="twitter:description" content="Notre équipe intervient pour tous vos travaux de construction (maisons individuelles, bâtiments collectifs), d’extension ou de rénovation, édifices privés (tertiaire, hôtellerie restauration, industriel…) ou bâtiments publics (lycées, équipements sociaux et sanitaire).">
-    <meta property="twitter:image" content="./assets/images/atelier-ca.jpg/">
+    <meta property="twitter:image" content="https://atelier-ca.fr/assets/images/atelier-ca.jpg">
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
