--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <meta name="keywords" content="atelier, architecte, architecture, maison, bâtiment, bureaux, étude, expertise, normes, ouvrage, extension, surélévation, commerces, public, erp, faisabilité, brive, malemort, agence, construction, renovation">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://atelier-ca.fr/">
+    <meta property="og:url" content="http://atelier-ca.fr/">
     <meta property="og:title" content="COSSET ARCHITECTURE">
     <meta property="og:description" content="Notre équipe intervient pour tous vos travaux de construction (maisons individuelles, bâtiments collectifs), d’extension ou de rénovation, édifices privés (tertiaire, hôtellerie restauration, industriel…) ou bâtiments publics (lycées, équipements sociaux et sanitaire).">
-    <meta property="og:image" content="https://atelier-ca.fr/assets/images/atelier-ca.jpg/">
+    <meta property="og:image" content="http://atelier-ca.fr/assets/images/atelier-ca.jpg/">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://atelier-ca.fr/">
+    <meta property="twitter:url" content="http://atelier-ca.fr/">
     <meta property="twitter:title" content="COSSET ARCHITECTURE">
     <meta property="twitter:description" content="Notre équipe intervient pour tous vos travaux de construction (maisons individuelles, bâtiments collectifs), d’extension ou de rénovation, édifices privés (tertiaire, hôtellerie restauration, industriel…) ou bâtiments publics (lycées, équipements sociaux et sanitaire).">
-    <meta property="twitter:image" content="https://atelier-ca.fr/assets/images/atelier-ca.jpg">
+    <meta property="twitter:image" content="http://atelier-ca.fr/assets/images/atelier-ca.jpg">
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
@@ -30,7 +30,7 @@
     <script defer src="./js/main.js"></script>
     <script defer src="./js/index.js"></script>
 
-    <title>COSSET Architecture | Architecte situé en Corrèze près de Brive-la-Gaillarde</title>
+    <title>COSSET Architecture | Architecte situé en Corrèze proche de Brive-la-Gaillarde</title>
 </head>
 <body>
     <header>
