Ajout button responsive page nos-projets

--- a/nos-projets.html
+++ b/nos-projets.html
@@ -97,16 +97,19 @@
         <section id="projets">
             <h2>PROJETS</h2>
 
-            <div id="tri" style="display: none;">
-                <button>Tous les projets</button>
-                <button>Medico-Social</button>
-                <button>Education</button>
-                <button>Equipements Publics</button>
-                <button>Logements</button>
-                <button>Maisons Individuelles</button>
-                <button>Commerces</button>
-                <button>Industriels</button>
+            <div id="tri">
+                <button class="sourt_out so1">Tous les projets</button>
+                <button class="sourt_out so2">Medico-Social</button>
+                <button class="sourt_out so3">Education</button>
+                <button class="sourt_out so4">Equipements Publics</button>
+                <button class="sourt_out so5">Logements</button>
+                <button class="sourt_out so6">Maisons Individuelles</button>
+                <!-- <button class="sourt_out so7">Commerces</button> -->
+                <button class="sourt_out so8">Industriels</button>
             </div>
+
+
+
 
             <div class="bloc-projet">
 
