Gestion button active sur tablette

--- a/nos-projets.html
+++ b/nos-projets.html
@@ -98,7 +98,7 @@
             <h2>PROJETS</h2>
 
             <div id="tri">
-                <button class="sourt_out so1">Tous les projets</button>
+                <button class="sourt_out so1 active">Tous les projets</button>
                 <button class="sourt_out so2">Medico-Social</button>
                 <button class="sourt_out so3">Education</button>
                 <button class="sourt_out so4">Equipements Publics</button>
