--- a/agence.html
+++ b/agence.html
@@ -109,6 +109,14 @@
                         </div>
                     </div>
                     <div class="profil">
+                        <img src="./assets/images/agence/sergio.jpg" alt="Sergio LOPES">
+                        <div>
+                            <h3>Sergio LOPES</h3>
+                            <p>Architecte HMONP</p>
+                            <p>Associé</p>
+                        </div>
+                    </div>
+                    <div class="profil">
                         <img src="./assets/images/agence/delphine.jpg" alt="Delphine FOUCAUD">
                         <div>
                             <h3>Delphine FOUCAUD</h3>
