Title font + new logo

--- a/mentions.html
+++ b/mentions.html
@@ -95,7 +95,7 @@
                     Adresse : 14, Avenue Marie et Pierre Curie - 19360 MALEMORT<br>
                     Téléphone : 05 55 92 80 50<br>
                     Email : contact@atelier-ca.fr<br>
-                    Site Web : Atelier-CA - https://www.atelier-ca.fr<br>
+                    Site web : Atelier-CA - https://www.atelier-ca.fr<br>
                     Responsable éditorial : Sergio RAMOS LOPES<br>
                 </p>
             </section>
@@ -104,7 +104,7 @@
                 <p>
                     SAS OVH au capital de 10 069 020 €<br>
                     Immatriculation : 424 761 419 00045 - RCS Lille Métropole<br>
-                    Site Web : www.ovh.fr<br>
+                    Site web : www.ovh.fr<br>
                 </p>
             </section>
             <section class="articles">
@@ -112,7 +112,7 @@
                 <p>
                     Développeur : Fabio RAMOS LOPES<br>
                     Localisation : Bordeaux (33)<br>
-                    Profil : https://www.linkedin.com/in/fabio-ramoslopes/<br>
+                    <a href="https://fabiolopes.fr/" style="text-decoration: underline;">https://fabiolopes.fr/</a><br>
                 </p>
             </section>
             <section class="articles">
